base/ramuh-grid-overlay-provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ramuh-grid-overlay-provider
  labels:
    name: ramuh-grid-overlay-provider
    app: grid-overlay-provider

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ramuh-grid-overlay-provider
  template:
    metadata:
      labels:
        app: ramuh-grid-overlay-provider
    spec:
      containers:
      - name: ramuh-grid-overlay-provider
        image: gcr.io/project-ramuh/grid-overlay-provider:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 2
