base/ramuh-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ramuh-front
  labels:
    app: ramuh-front 
spec:
  type: NodePort
  selector:
    app: ramuh-front
  ports:
  - port: 80
    name: http
