base/ramuh-grid-overlay-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ramuh-grid-overlay-provider
  labels:
    app: ramuh-grid-overlay-provider 
spec:
  type: NodePort
  selector:
    app: ramuh-grid-overlay-provider
  ports:
  - port: 80
    targetPort: 8080
    name: http
